test/hello.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: testing
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: tutum/hello-world
        name: hello-app
