test/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: testing
  labels:
    app: web
  name: web
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: 80
  selector:
    app: web

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: testing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: testing.staging.aqilliz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: https
